// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#freshApplication1 1`] = `
"<div
  class=\\"modal fade\\"
  id=\\"modal\\"
  tabindex=\\"-1\\"
  role=\\"dialog\\"
  aria-labelledby=\\"modal\\"
  aria-hidden=\\"true\\"
>
  <div class=\\"modal-dialog\\" role=\\"document\\">
    <div class=\\"modal-content\\">
      <div class=\\"modal-header\\">
        <h5 class=\\"modal-title\\"></h5>
        <button
          type=\\"button\\"
          class=\\"btn-close\\"
          data-bs-dismiss=\\"modal\\"
          aria-label=\\"Close\\"
        ></button>
      </div>
      <div class=\\"modal-body\\"></div>
      <div class=\\"modal-footer\\">
        <a
          class=\\"btn btn-primary full-article\\"
          role=\\"button\\"
          target=\\"_blank\\"
          rel=\\"noopener noreferrer\\"
        >
          Full article
        </a>
        <button type=\\"button\\" class=\\"btn btn-secondary\\" data-bs-dismiss=\\"modal\\">
          Close
        </button>
      </div>
    </div>
  </div>
</div>
<main class=\\"flex-grow-1\\">
  <section class=\\"input-form container-fluid bg-dark p-5\\">
    <div class=\\"row\\">
      <div class=\\"col-md-10 col-lg-8 mx-auto text-white\\">
        <h1 class=\\"input-form__title display-3\\">RSS Reader</h1>
        <p class=\\"lead\\">Start reading RSS today! It is easy, it is nicely.</p>
        <form id=\\"rssForm\\" action=\\"\\" class=\\"rss-form\\">
          <div class=\\"row\\">
            <div class=\\"col-12 col-sm\\">
              <input
                required=\\"\\"
                id=\\"rssFormInput\\"
                type=\\"text\\"
                name=\\"url\\"
                class=\\"form-control form-control-lg w-100\\"
                placeholder=\\"RSS link\\"
              />
            </div>
            <div class=\\"col-12 col-sm-auto mt-3 mt-sm-0\\">
              <button
                type=\\"submit\\"
                class=\\"btn btn-lg btn-primary px-sm-5 w-100 w-sm-auto\\"
              >
                Add
              </button>
            </div>
          </div>
        </form>
        <p class=\\"text-muted my-1\\">Example: https://ru.hexlet.io/lessons.rss</p>
        <div class=\\"feedback\\"></div>
      </div>
    </div>
  </section>
  <section class=\\"container-fluid p-5\\">
    <div class=\\"row\\">
      <div class=\\"col-md-10 col-lg-8 mx-auto feeds\\"></div>
    </div>
    <div class=\\"row\\">
      <div class=\\"col-md-10 col-lg-8 mx-auto posts\\"></div>
    </div>
  </section>
</main>
<footer class=\\"footer border-top py-3 mt-5\\">
  <div class=\\"container-xl\\">
    <div class=\\"text-center\\">
      created by
      <a
        class=\\"text-decoration-none\\"
        href=\\"https://github.com/alex-ismailov\\"
        target=\\"_blank\\"
      >
        Alex Ismailov
      </a>
    </div>
  </div>
</footer>
<script src=\\"main.js\\"></script>
"
`;

exports[`#addNewFeedWithTwoPosts1 1`] = `
"<div class=\\"modal fade\\" id=\\"modal\\" tabindex=\\"-1\\" role=\\"dialog\\" aria-labelledby=\\"modal\\" aria-hidden=\\"true\\">
  <div class=\\"modal-dialog\\" role=\\"document\\">
    <div class=\\"modal-content\\">
      <div class=\\"modal-header\\">
        <h5 class=\\"modal-title\\"></h5>
        <button type=\\"button\\" class=\\"btn-close\\" data-bs-dismiss=\\"modal\\" aria-label=\\"Close\\"></button>
      </div>
      <div class=\\"modal-body\\"></div>
      <div class=\\"modal-footer\\">
        <a class=\\"btn btn-primary full-article\\" role=\\"button\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Full article</a>
        <button type=\\"button\\" class=\\"btn btn-secondary\\" data-bs-dismiss=\\"modal\\">Close</button>
      </div>
    </div>
  </div>
</div>
<main class=\\"flex-grow-1\\">
  <section class=\\"input-form container-fluid bg-dark p-5\\">
    <div class=\\"row\\">
      <div class=\\"col-md-10 col-lg-8 mx-auto text-white\\">
        <h1 class=\\"input-form__title display-3\\">RSS Reader</h1>
        <p class=\\"lead\\">Start reading RSS today! It is easy, it is nicely.</p>
        <form id=\\"rssForm\\" action class=\\"rss-form\\">
          <div class=\\"row\\">
            <div class=\\"col-12 col-sm\\">
              <input required id=\\"rssFormInput\\" type=\\"text\\" name=\\"url\\" class=\\"form-control form-control-lg w-100\\" placeholder='RSS link'>
            </div>
            <div class=\\"col-12 col-sm-auto mt-3 mt-sm-0\\">
              <button type=\\"submit\\" class=\\"btn btn-lg btn-primary px-sm-5 w-100 w-sm-auto\\">Add</button>
            </div>
          </div>
        </form>
        <p class=\\"text-muted my-1\\">Example: https://ru.hexlet.io/lessons.rss</p>
        <div class=\\"feedback\\"></div>
      </div>
    </div>
  </section>
  <section class=\\"container-fluid p-5\\">
  <div class=\\"row\\">
    <div class=\\"col-md-10 col-lg-8 mx-auto feeds\\">
      <h2>Feeds</h2>
      <ul class=\\"list-group mb-5\\">
        <li class=\\"list-group-item border\\">
          <h3>Lorem ipsum feed for an interval of 1 minutes with 2 item(s)</h3>
          <p>This is a constantly updating lorem ipsum feed</p>
        </li>
      </ul>
    </div>
  </div>
  <div class=\\"row\\">
    <div class=\\"col-md-10 col-lg-8 mx-auto posts\\">
      <h2>Posts</h2>
      <ul class=\\"list-group mb-5\\">
        <li class=\\"list-group-item d-flex justify-content-between align-items-start\\"><a href=\\"http://example.com/test/1613416740\\" class=\\"text-decoration-none fw-bold\\" data-id=\\"2\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Lorem ipsum 2021-02-15T19:19:00Z</a>
          <button type=\\"button\\" class=\\"btn btn-primary btn-sm\\" data-id=\\"2\\" data-bs-toggle=\\"modal\\" data-bs-target=\\"#modal\\">Preview</button>
        </li>
        <li class=\\"list-group-item d-flex justify-content-between align-items-start\\"><a href=\\"http://example.com/test/1613416680\\" class=\\"text-decoration-none fw-bold\\" data-id=\\"3\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">Lorem ipsum 2021-02-15T19:18:00Z</a>
          <button type=\\"button\\" class=\\"btn btn-primary btn-sm\\" data-id=\\"3\\" data-bs-toggle=\\"modal\\" data-bs-target=\\"#modal\\">Preview</button>
        </li>
      </ul>
    </div>
  </div>
</section>
</main>
<footer class=\\"footer border-top py-3 mt-5\\">
  <div class=\\"container-xl\\">
    <div class=\\"text-center\\">
      created by
      <a class=\\"text-decoration-none\\" href=\\"https://github.com/alex-ismailov\\" target=\\"_blank\\">Alex Ismailov</a>
    </div>
  </div>
</footer>
<script src=\\"main.js\\"></script>
"
`;